added and integrated sheet classification (AI powered)